# tenseur

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  api.rst  concepts.rst  conf.py  index.rst  quickstart.rst
examples/: ressac_part_1.py  ressac_part_2.py  ressac_part_3.py  ressac_part_4.py
examples/ressac_save/: ressac_part_1.py  ressac_part_2.py  ressac_part_3.py  tracks.py
tenseur/: __init__.py
tenseur/backends/: __init__.py  ableton.py  base.py  midi.py  osc.py
tenseur/core/: clip.py  constants.py  types.py
tenseur/helpers/: __init__.py  create.py  scales.py  transforms.py
tenseur/utils/: midi_utils.py  random.py  validation.py
tenseur/viz/: plot.py
tests/: conftest.py  test_ableton_backend.py  test_clip.py  test_helpers.py  test_midi_backend.py  test_osc_backend.py
