[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenseur"
version = "0.1.0"
description = "Tensor-based musical composition with NumPy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Choqueuse", email = "vincent.choqueuse@enib.fr" },
]
keywords = ["music", "composition", "numpy", "tensor", "live-coding", "ableton"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "mido",
    "python-osc",
]

[project.optional-dependencies]
viz = ["matplotlib"]
docs = ["sphinx", "furo"]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/vincentchoqueuse/tenseur"
Repository = "https://github.com/vincentchoqueuse/tenseur"
Documentation = "https://vincentchoqueuse.github.io/tenseur/"

[tool.pytest.ini_options]
testpaths = ["tests"]
